fix: refatorando geração de certificados e alterando arquitetura. Agora front end gera tudo e envia Base64 para o back end. Certificados gerados ficam salvos como arquivos em um volume